# water-credits-contracts

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
contracts/credit_factory/: Cargo.toml
contracts/credit_factory/src/: lib.rs
contracts/credit_token/src/: lib.rs
contracts/governance/src/: lib.rs
contracts/project_registry/: Cargo.toml
contracts/project_registry/src/: lib.rs
contracts/retirement_registry/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: lib.rs
contracts/verification_oracle/src/: lib.rs
doc/: MATH.md  SPEC.md
scripts/: deploy.sh
tests/: Cargo.toml
tests/tests/: credit_lifecycle.rs  emergency_pause.rs  project_id_compat.rs
