[workspace]
members = [
    "contracts/shared",
    "contracts/credit_token",
    "contracts/credit_factory",
    "contracts/verification_oracle",
    "contracts/retirement_registry",
    "contracts/project_registry",
    "contracts/governance",
    "tests",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "20.0.0"
serde = { version = "1.0", features = ["derive"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
